--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <title> This is Luke's webpage</title>
 </head>
 <body>
-<h1>Hello, World!</h1>
+<h1>The world might be flat or round.</h1>
 </body>
