--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-<title> This is Luke's webpage</title>
+<title>404 Not Found </title>
+<h1>This webpage you tried to acsses is unavaible.</h1>
 </head>
 <body>
 <h1>The world might be flat or round.</h1>
